--- a/src/teensy_communication/package.xml
+++ b/src/teensy_communication/package.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>teensy_communication</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="chabots@todo.todo">chabots</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.1.0</version>
+  <description>ROS 2 node that sends data to a Teensy over UART (GPIO) using /dev/ttyAMA0.</description>
+
+  <maintainer email="you@example.com">Roy</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>rclcpp</depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+  <depend>std_msgs</depend>
+  <export/>
 </package>
