--- a/src/otos_reader/package.xml
+++ b/src/otos_reader/package.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>otos_reader</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="ribm205@gmail.com">ribm205</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Nodo ROS 2 en Python para leer datos del sensor SparkFun OTOS con manejo de bias y reconexión</description>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>ament_xmllint</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <maintainer email="tu_correo@example.com">Tu Nombre</maintainer>
+  <license>MIT</license>
+
+  <!-- Dependencias de compilación -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <!-- Dependencias en tiempo de ejecución -->
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+
+  <!-- (Opcional) Si necesitas otras dependencias de ROS 2 -->
+  <!-- <exec_depend>sensor_msgs</exec_depend> -->
 
   <export>
     <build_type>ament_python</build_type>
