--- a/src/vision_node/package.xml
+++ b/src/vision_node/package.xml
@@ -17,6 +17,8 @@
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>cv_bridge</depend>
+  <exec_depend>python3-opencv</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <export>
     <build_type>ament_python</build_type>
   </export>
